fix modals on mobile

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -9,40 +9,6 @@ $cb-red: #ff6666;
 @import "./components/index.scss";
 @import "lists.scss";
 
-body.centered-modal-showing {
-  overflow: hidden;
-}
-.centered-scrolling-wrapper {
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  overflow-y: scroll;
-  z-index: 200;
-}
-
-.centered-scrolling-overlay {
-  position: relative;
-  height: auto;
-  min-height: 100vh;
-  padding: 1em;
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-}
-.centered-scrolling-container {
-  position: relative;
-  background-color: white;
-  width: 100%;
-  max-width: 650px;
-  min-height: 20em;
-  margin-top: 100px;
-  margin-bottom: 30px;
-  box-sizing: border-box;
-  box-shadow: 0px 4px 25px 4px rgba(0,0,0,0.30);
-}
-
 .notes-list-container {
   height: calc(100% - 75px);
   overflow: auto;
@@ -55,16 +21,6 @@ body.centered-modal-showing {
 .modal-container {
   max-height: 80vh;
   overflow: auto;
-}
-
-.cart-modal-overlay {
-  z-index: 500;
-  padding-top: 70px;
-}
-
-.cart-modal-overlay .round-img {
-  width: 100%;
-  height: 100%;
 }
 
 .display-block {
@@ -145,6 +101,7 @@ tr.highlight td {
 .c-topnav {
   width: 88vw;
   max-width: unset;
+  z-index: 5;
 }
 
 .max-width-unset {
